# Porta

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
debug/: ftdi_ft232.cfg  readme.md
html/: config-wifi.html  index.html  scripts.js  style.css
main/: CMakeLists.txt  component.mk  i_define.h  i_type_def.h  idf_component.yml  learn.c  main.c  main.h  parse_json.c  parse_json.h
main/files/: index.html
main/i_https_client/: i_https_client.c  i_https_client.h
main/i_i2c/: i_i2c.c  i_i2c.h
main/i_modbus/: i_mb_params.h  i_modbus.c  i_modbus.h
main/i_mqtt_client/: i_mqtt_client.c  i_mqtt_client.h
main/i_sd_mmc/: i_sd_mmc.c  i_sd_mmc.h
main/i_server/: i_server.c  i_server.h
main/i_wifi_connect/: i_wifi_connect.c  i_wifi_connect.h
site/: package-lock.json  package.json  vite.config.ts
site/src/: App.tsx
spiffs_dir/: index.html
spiffs_dir/sub/: data.txt
